# TANGO

./: .gitignore  README.md  pyproject.toml
data/: dataset_inventory.tsv
docs/: BENCHMARK.md  DATA_STRATEGY.md  METHOD.md  ROADMAP.md
examples/: python_quickstart.py
python/tangoqtl/: __init__.py  baselines.py  cli.py  core.py  covariance.py  sim.py  stats.py
rpkg/: DESCRIPTION  NAMESPACE
rpkg/R/: adaptive_omnibus_test.R  covariance.R  stats.R
rpkg/examples/: r_quickstart.R
scripts/: benchmark_simulation.py  download_reference_data.sh  prepare_matrix_reference.py
tests/: test_core.py
