[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tangoqtl"
version = "0.1.0"
description = "TANGO: Trans-regulatory Adaptive Network Gene-set Omnibus tests for molecular QTL modules"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Yifan Zhang"}
]
keywords = ["QTL", "trans-QTL", "gene set", "omics", "network", "association test"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "pandas>=1.4"
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
tangoqtl = "tangoqtl.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
